[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsos-guard"
version = "0.3.0"
description = "社区最好用的AI安全插件，没有之一——能不拦就不拦，该拦的绝对不漏"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "老黑（大成）", email = "xiaohei-vsos@coze.email"},
]
keywords = ["ai", "security", "guard", "guardrails", "safety", "jailbreak", "injection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/vsos-guard/vsos-guard"
Repository = "https://github.com/vsos-guard/vsos-guard"
Issues = "https://github.com/vsos-guard/vsos-guard/issues"

[tool.setuptools.packages.find]
include = ["vsos_guard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
