[package]
name = "vsos-panel"
version = "0.6.0"
description = "VSOS Guard Desktop Panel"
authors = ["VSOS Guard"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
cfg-if = "1"
